finished crud best practices, primereact data-tables, crop guide

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,6 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'primereact/resources/themes/saga-blue/theme.css'; /* PrimeReact Saga Blue theme */
+@import 'primereact/resources/primereact.min.css'; /* PrimeReact core styles */
+@import 'primeicons/primeicons.css'; /* PrimeReact Icons */
+
+@layer tailwind-base, primereact, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
 
 @layer base {
   :root {
